fix(YSP-000): attempt to fix quick links button
Instead of treating this inside of link treatment, this is an attempt to
fix the issue at the component level.

This attempts to fix flex issues with the span on Safari since at some
screen sizes, it will cause strange wrapping that doesn't look good.
This allows it to display in an inline manner with the rest of the link
text by wrapping the whole thing.

--- a/components/01-atoms/controls/cta/_yds-cta.scss
+++ b/components/01-atoms/controls/cta/_yds-cta.scss
@@ -16,7 +16,7 @@ $cta-outline-weights: (
   '4': var(--border-thickness-4),
 );
 
-@mixin cta {
+@mixin cta-wrapper {
   // prettier-ignore
   border: var(--border-thickness-cta, var(--border-thickness-2)) solid var(--color-cta-border);
   border-radius: var(--border-radius-cta, var(--radius-0));
@@ -27,6 +27,10 @@ $cta-outline-weights: (
   text-decoration: none;
   text-align: center;
   min-height: var(--size-click-target-minimum);
+}
+
+@mixin cta {
+  @include cta-wrapper;
 
   &:hover {
     background-color: var(--color-cta-bg-hover);
